--- a/field.tex
+++ b/field.tex
@@ -36,13 +36,13 @@
 
 \begin{abstract}
 
-Scanning Electrochemical Microscopy (SECM) is an invaluable tool in corrosion science.
-It allows the selective imaging of a particular ionic species being released at the anodic sites, using ion-selective microelectrodes (ISMEs) as scanning probes.
-An often studied phenomenon is galvanic corrosion, which involves two metals in electrical contact, immersed in the same electrolyte.
-The measured potential of the ISME is thought to depend only on the activity of primary ion.
-However, an electric field is also formed as a result of the potential difference between the surfaces of the galvanic pair, which has a direct influence on the potential of the microelectrode; the measured potential is the sum of these two.
+Potentiometric Scanning Electrochemical Microscopy (SECM) is a powerful tool in corrosion science.
+It allows the selective imaging of a particular ionic species released at the anodic sites in a corrosion microcell, by using ion-selective microelectrodes (ISMEs) as scanning probes.
+An often studied process is galvanic corrosion, which involves two dissimilar metals in electrical contact, that are immersed in the same electrolyte phase.
+The measured potential of the ISME is thought to depend only on the activity of the primary ion.
+However, an electric field is also formed as a result of the potential difference between the surfaces of the galvanic pair, which has a direct influence on the potential of the sensing microelectrode; the measured potential is the sum of these two contributions.
 The potential difference caused by the electric field can be substantially large, exceeding that of the potential difference associated with the activity of the primary ion.
-In this paper, we present experimental evidence of this, and investigate the extent to which it influences the final image. 
+In this paper, we present experimental evidence of this feature, and investigate the extent to which it influences the final chemically-resolved image. 
 \end{abstract}
 \begin{keyword}
 	scanning electrochemical microscopy \sep potentiometry \sep ionselective microelectrode \sep galvanic corrosion \sep electric field
@@ -51,39 +51,38 @@ In this paper, we present experimental evidence of this, and investigate the ext
 
 \section{Introduction}
 
-In the past decade, potentiometric SECM -- or as referred to by the experts of this field Scanning Ion Selective Electrode Technique (SIET) -- has become very popular among corrosion scientists \cite{lamaka, ZnISME, diamondel, cutedge, H+selective, simulating}.
-The most broad spread application is the visualization of galvanic corrosion \cite{amperopot, chloride, spatiozn, fezn}.
-Galvanic corrosion occurs when two dissimilar metals are connected both electrically and immersed in the same electrolyte. 
-The electric coupling results the preferential and accelerated dissolution of the anode, while reduces corrosion rate of the cathode.
-The spatial separation of the anodic and the cathodic sites makes the complex corrosion processes easily interpretable and due to the increased corrosion rate conveniently short exposure times are sufficient to obtain convincing images about concentration distributions in the solution adjacent to the corroding sample.
+In the past decade, potentiometric SECM -- sometimes referred to Scanning Ion Selective Electrode Technique (SIET) by the experts of this field -- has become increasingly popular among corrosion scientists \cite{lamaka, ZnISME, diamondel, cutedge, H+selective, simulating}.
+The most extended application is the visualization of galvanic corrosion processes \cite{amperopot, chloride, spatiozn, fezn}.
+Galvanic corrosion occurs when two dissimilar metals are both connected electrically and immersed in the same electrolyte. 
+The electric coupling originates preferential and accelerated dissolution of the less noble metal acting as the anode of the corrosion cell, while the corrosion rate of the cathode is reduced.
+The spatial separation of the anodic and the cathodic sites makes the complex corrosion processes readily interpretable, and due to the increased corrosion rates, conveniently shorter exposure times may be sufficient to obtain spatially-resolved images of the concentration distributions developed in the solution adjacent to the corroding sample.
 
 Despite these beneficial circumstances, quantitative evaluation of galvanic corrosion using potentiometric SECM often fails due to –- up to now –- unrevealed reasons.
-Izquierdo et. al. reported discrepant results comparing vertical approaching curves towards the cathode of the Mg-Fe galvanic couple obtained by amperometric O$_2$ detection and potentiometric pH measurements \cite{pH15}. Local alkalinization could be detected even at 2 mm tip-substrate distance, whereas oxygen concentration reached the bulk level at ca. 900 $\upmu$m height. The phenomenon was explained by the contribution of the electric field to the potentiometric signal.  
-In another works, Mg$^{2+}$ above Mg alloy disc galvanically coupled to iron detected with Mg ISME highly exceeded the upper limit of detection of the probe \cite{overmg1, overmg2, overmg3}.
-On the other hand, pMg values fallen below the lower limit of detection of Mg ISMEs scanning above cathodically polarized magnesium strips \cite{belowmg}. 
+Izquierdo et al. reported discrepant results comparing Z-approach curves towards the cathode of a Mg-Fe galvanic couple obtained by either amperometric O$_2$ detection or potentiometric pH measurement \cite{pH15}. Local alkalinization could be detected even at 2 mm tip-substrate distance, whereas oxygen concentration already reached the bulk level at only ca. 900 $\upmu$m height. This discrepancy was attributed to an (unknown) contribution of the electric field to the potentiometric signal.  
+In another works, the concentration of Mg$^{2+}$ that was detected using a Mg ISME above the Mg alloy disc, while galvanically coupled to iron, highly exceeded the upper limit of detection of the probe \cite{overmg1, overmg2, overmg3}.
+On the other hand, pMg values fell below the lower limit of detection of Mg ISMEs scanning above cathodically polarized magnesium strips \cite{belowmg}. 
 
 \begin{figure}
 \centering
 % trim = top left bottom right
 \includegraphics[width=0.5\textwidth]{abstract.eps}
-\caption{An electric field is formed between the surfaces of the galvanic couple. The potential difference between the measuring ($\phi_M$) and reference electrode ($\phi_R$) is added to the nernstian potential associated with the ion activity.}
+\caption{An electric field is formed between the surfaces of the dissimilar metals constituting the galvanic couple. The potential difference between the measuring ($\phi_M$) and reference ($\phi_R$) electrodes is added to the Nernstian potential associated with the activity of the particular ion.}
 \label{fig:abstract}
 \end{figure}
 
-
-These phenomena could be explained by a contribution of the electric field to the measured potential. As it is well-known, the corrosion current within the metallic phase carried by electrons, causes negligible ohmic potential differences, because of the high conductivity. However, the current in the aqueous phase associated with potential differences \cite{Isaacsfield}. 
-The potential difference between the surfaces of the anode and the cathode causes an electric field to be formed. 
-This phenomenon is exploited in Scanning Reference Electrode Technique (SRET), which allows determining corrosion current by measuring the potential variation in the solution with a scanning passive reference probe \cite{SRET1, SRET2, SRET3, SRET4}. 
-The localized electric field SRET has been slowly replaced by the more sensitive Scanning Vibrating Electrode Technique (SVET) in which a simple vibrating probe is sensitive enough to detect small potential gradients arisen from ionic currents in the solution \cite{SVET}. 
-In potentiometric SECM experiments carried out above galvanic couples the ISMEs are subjected to the same effects, therefore as suspected by the above mentioned researchers, electric field can have an unwanted contribution to the potentiometric signal. 
-The potential difference between the points where the electrodes are located is added to the potential difference associated with the primary ion activity at the tip of the measuring electrode (fig. \ref{fig:abstract}):
+These observations can be explained in terms of a contribution of the electric field to the measured potential. As it is well-known, the corrosion current is carried by electrons within the metallic phase, and it experiences negligible ohmic potential differences, because of the high conductivity of the material. Conversely, the ionic current flowing in the aqueous phase is associated with potential differences \cite{Isaacsfield}. 
+That is, the potential difference between the anode and the cathode surfaces causes an electric field to be formed. 
+This phenomenon is exploited in the Scanning Reference Electrode Technique (SRET), which allows to determine corrosion currents by actually measuring the potential variation in the solution with a scanning passive reference probe \cite{SRET1, SRET2, SRET3, SRET4}. 
+The localized electric field SRET method has been progressively replaced by the more sensitive Scanning Vibrating Electrode Technique (SVET) in which a single vibrating probe is sensitive enough to detect smaller potential gradients arisen from ionic currents flowing in the solution \cite{SVET}. 
+In the potentiometric SECM experiments cited above conducted on galvanic couples, the ISMEs must be subjected to the same effects. Then, as suspected by the above mentioned researchers, the local electric field may produce an undesired contribution to the potentiometric signal. 
+The potential difference between the points where the electrodes are located is added to the potential difference associated with the primary ion activity at the tip of the measuring electrode (see fig. \ref{fig:abstract}):
 
 \begin{equation}
 \Delta E=E_M-E_R + (\phi_M - \phi_R)
 \label{eq:potential}
 \end{equation}
 
-where $\Delta E$ is the measured potential difference, $E_R$ is the potential of the reference electrode, $\phi_M$ and $\phi_R$ are the potentials in the electric field at the measuring and reference electrodes, respectively. $E_M$ is the potential of the measuring electrode selective for e.g. $Mg^{2+}$:
+where $\Delta E$ is the measured potential difference, $E_R$ is the potential of the reference electrode, and $\phi_M$ and $\phi_R$ are the local potentials in the electric field at the measuring and reference electrodes, respectively. $E_M$ is the potential of the measuring ion-selective electrode for instance $Mg^{2+}$:
 
 \begin{equation}
 E_M = S \times lg[Mg^{2+}] + E_M^o
@@ -91,22 +90,22 @@ E_M = S \times lg[Mg^{2+}] + E_M^o
 \end{equation}
 
 where $S$ is the slope of the calibration curve of the potentiometric cell with respect to the primary ion, and $E_M^o$ is the standard potential.
-Since one expects that the potential measured by the ISMEs is solely determined by the activity of the primary ions, and the aim of the experiments to obtain quantitatively reliably concentration distributions the additional contributions to the analytical signal have to be revealed.
+Since one could expect that the potential measured by the ISME is solely determined by the activity of the primary ions, and the aim of the experiments is to obtain quantitative and reliable concentration distributions of the species of interest, the additional contributions to the analytical signal have to be revealed.
 
-The effect of the electric field on the measured potential difference has been investigated in this paper. The galvanic corrosion of the AZ63 Mg-Al alloy and iron was used as a model system.
+In this contribution, the effect of the electric field on the measured potential difference at an ion-selective microelectrode probe has been investigated. The galvanic corrosion between an AZ63 Mg-Al alloy and iron was used as model system.
 
 \section{Material and methods}
 
-The preparation of solid contanct $Mg^{2+}$ selective microelectrodes is described in details in a previous work \cite{overmg3}. Micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The micropipette were soaked in 1:1 H$_2$SO$_4$:H$_2$O$_2$ solution and washed with double deionized water. The capillaries were silanized by 1 hour exposition to the saturated vapour of dichloro-dimethyl-silane in closed Petri dishes at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (obtained as a generous gift from Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized onto the carbon fiber in 0.1 M EDOT-containing BMIM-PF$_6$ ionic liquid solution. 10 consecutive cyclic voltammetry cycles were taken in -0.9 $\leq$ E $\leq$ 1.3 V range. The doping step was performed in 0.1 M KCl aqueous solution by applying 15 consecutive potential cycles in the -0.9 $\leq$ E $\leq$ 0.8 V range. The membrane components were purchased from Fluka (Buchs, Switzerland). The cocktail contains N,N''-Octamethylene-bis(N'-heptyl-N'-methyl-methylmalonamide inophore, 2-nitrophenyl-octyl ether emollient, PVC, potassium-[tetrakis-4-chlorophenyl]-borate and tetrahydrofuran. Eventually, the micropipette was frontfilled with the cocktail and the PEDOT coated carbon fiber was inserted in the lumen of the capillary.
-The Mg ISMEs were calibrated by measuring their potential against Ag/AgCl/KCl (3M) reference electrode in tenfold diluted MgCl$_2$ solutions between $10^{-7}$ and $10^{-1}$ M concentrations. The activities were calculated using the Debye-Hückel theory. Nernstian relationship was found in between $10^{-1}$ and $10^{-5}$ M, the equation of the linear portion of the calibration curve is E = 29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3. 
+The preparation of solid contact $Mg^{2+}$ selective microelectrodes was described in detail before \cite{overmg3}. In brief, micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The micropipette were soaked in 1:1 H$_2$SO$_4$:H$_2$O$_2$ solution and washed with twice deionized water. The capillaries were next silanized by 1 hour exposition to the saturated vapour of dichloro-dimethyl-silane in closed Petri dishes at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (obtained as a generous gift from Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized onto the carbon fiber in 0.1 M EDOT-containing BMIM-PF$_6$ ionic liquid solution. 10 consecutive cyclic voltammetry cycles were run in the -0.9 $\leq$ E $\leq$ 1.3 V potential range. The subsequent doping step was performed in 0.1 M KCl aqueous solution by applying 15 consecutive potential cycles in the -0.9 $\leq$ E $\leq$ 0.8 V range. The membrane components were purchased from Fluka (Buchs, Switzerland). The cocktail contains N,N''-Octamethylene-bis(N'-heptyl-N'-methyl-methylmalonamide inophore, 2-nitrophenyl-octyl ether emollient, PVC, potassium-[tetrakis-4-chlorophenyl]-borate and tetrahydrofuran. Eventually, the micropipette was front-filled with the cocktail, and the PEDOT-coated carbon fiber was inserted in the lumen of the capillary.
+The Mg-ISMEs were calibrated by measuring their potential against an Ag/AgCl/KCl (3M) reference electrode in MgCl$_2$ solutions with tenfold increased concentrations between $10^{-7}$ and $10^{-1}$ M. The activities were calculated using the Debye-Hückel approach. A Nernstian relationship was observed between $10^{-1}$ and $10^{-5}$ M; the equation of the linear portion of the calibration curve is E = 29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3.
 
-The (Mg/Al)/Fe galvanic couple target was prepared from the AZ63 Mg/Al alloy and high purity Fe wires with an identical diameter of 0.76 mm. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark)., exposing only the disk shaped surfaces and allowing to make electric contact at the rear of the mould. Frontal surface of the mould was first polished with SiC paper down to 4000 grit, then with 1.0, 0.3 $\upmu$m alumina powder.
+The (Mg/Al)/Fe galvanic couple specimen was prepared using the AZ63 Mg/Al alloy and high purity Fe wires of 0.76 mm diameter. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark), exposing only the disk shaped surfaces at one side of the mould, and protruding at the rear side allowing to establish electric contact contact. Frontal surface of the mould was first ground with SiC paper up to 4000 grit, then polished with 1.0 and 0.3 $\upmu$m alumina powders.
 
-SECM experiments were carried out using a homemade instrument operated with custom software. The potential values of the Mg ISMEs were measured with against a Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB (eDAQ Pty Ltd, Australia).
+SECM experiments were carried out using a homemade instrument operated with custom software. The potential values of the Mg ISMEs were measured respect to an Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB (eDAQ Pty Ltd, Australia).
 
 \section{Results and discussion}
 
-Consecutive approaching curves were recorded above the corroding AZ63 sample (fig. \ref{fig:approach}A). The first 6 were taken while the AZ63 sample was not coupled to the iron sample (red lines). As expected, Mg$^{2+}$ activity slowly increased as a result of homogeneous corrosion. The overall change was about 10 mV in 5 minutes. Then, the two metals were coupled at the rear end of the mould. The moment the galvanic connection was established, there was an immediate rise of about 40 mV in the measured potential of the microelectrode (transition from the red to the blue curves). This cannot possibly be attributed to the increase of Mg$^{2+}$ activity that far from the source, since the coupling was established when the scanning tip was 1000 $\upmu$m from the AZ63 sample. Also, a 40 mV rise would mean an increase of about 1.5 orders of magnitude in Mg$^{2+}$ activity in less then a second. Then, without pause, six additional approaching curves were recorded during the galvanic coupling. The accelerated dissolution of Mg$^{2+}$ can be seen in fig. \ref{fig:approach}A (blue curves). Intense gas evolution could be observed on the surface of the AZ63 sample, which explains the noticeably more noise. During this period, the potential at h = 1000 $\upmu$m increased by about 40 mV. This rise can be completely attributed to the increase in activity: $\Delta E = 29.5 mV \times \Delta lg[$Mg$^{2+}]$. Lastly, the galvanic connection was severed, and 2 more approaching curves were measured (green curves). A sudden jump in potential (transition from blue to green curves) can be observed, with the same magnitude as before, but opposite direction, as a result of the electric field vanishing. The shape of the curves are very similar to the first few approaching curves, only they are shifted by about 40 mV to the positive direction. This is the result of the accelerated corrosion during the second phase; Mg$^{2+}$ activity changed by about the same factor throughout the length of the scanline. The shape of the curves recorded during the galvanic coupling are noticeabyl different that those recorded during the homogeneous corrosion. This is because the contribution of the electric field, just like the contribution from Mg$^{+2}$, is not uniform at different distances on the scanned line. The strength of the electric field is inversely proportional to the square of the distance. The shape of the function 1/$z^2$ is recognizable in these curves.
+A series of consecutive Z-approach curves were recorded above the corroding AZ63 sample (as shown in fig. \ref{fig:approach}A). The first 6 measurements were taken while the AZ63 sample was not electrically connected to the iron sample (red lines). As expected, Mg$^{2+}$ activity slowly increased with time as a result of spontaneous corrosion. The overall change was about 10 mV in 5 minutes. Next, the two metals were connected at the rear of the mould. As result of establishing the galvanic connection, there was an immediate rise of about 40 mV in the measured potential of the microelectrode (that is depicted by the transition from the red to the blue curves in fig. \ref{fig:approach}A). Since the galvanic coupling was established while the scanning tip was located 1000 $\upmu$m from the AZ63 sample, the reported change cannot possibly be attributed solely to an abrupt increase in Mg$^{2+}$ activity. Indeed, such a 40 mV change would correspond to an increase of ca. 1.5 orders of magnitude in Mg$^{2+}$ activity occuring in less than one second. Immediately after, six additional Z-approach curves were recorded during the galvanic coupling. The resulting accelerated dissolution of Mg$^{2+}$ can be distinguished from the blue curves in fig. \ref{fig:approach}A. Intense gas evolution could be observed on the surface of the AZ63 sample, which explains the noticeably more noisy curves recorded in this case. During this period of galvanic coupling, the potential sensed at the ISME, when situated at h = 1000 $\upmu$m, increased in app. 40 mV. This rise can be totally attributed to the increase in activity of the dissolving metal, i.e.: $\Delta E = 29.5 mV \times \Delta lg[$Mg$^{2+}]$. Finally, when the galvanic connection was stopped, 2 additional Z-approach curves were measured (green curves in fig. \ref{fig:approach}A). A sudden jump in potential (transition from blue to green curves) can be observed, with the same magnitude as before, but opposite direction, as a result of the electric field vanishing. The shape of the curves are very similar to the first few approaching curves, only they are shifted by about 40 mV to the positive direction. This is the result of the accelerated corrosion during the second phase; Mg$^{2+}$ activity changed by about the same factor throughout the length of the scanline. The shape of the curves recorded during the galvanic coupling are noticeabyl different that those recorded during the homogeneous corrosion. This is because the contribution of the electric field, just like the contribution from Mg$^{+2}$, is not uniform at different distances on the scanned line. The strength of the electric field is inversely proportional to the square of the distance. The shape of the function 1/$z^2$ is recognizable in these curves.
 
 \begin{figure}
 \centering
